--- a/src/style/about.scss
+++ b/src/style/about.scss
@@ -82,11 +82,36 @@
             height: 150px;
             border-radius: 50%;
             background-color: #242424;
+            overflow: hidden;
+
+            background-position: 50% 50%;
+            background-repeat: no-repeat;
+            background-size: cover;
+
+            &::after {
+              content: '';
+              width: 100%;
+              height: 100%;
+              backdrop-filter: blur(5px);
+
+              background-image: url(../assets/icons/youtube.svg);
+              background-position: 50% 50%;
+              background-repeat: no-repeat;
+
+              opacity: 0;
+              transition: opacity 0.1s ease-in-out;
+            }
           }
   
           #name {
             font-size: 15px;
             font-weight: 600;
+          }
+
+          &:hover {
+            #profile::after {
+              opacity: 1;
+            }
           }
         }
       }
@@ -97,7 +122,7 @@
 
       #list {
         flex-direction: row;
-        gap: 24px;
+        gap: 22px;
       }
     }
 
